<resources>
    <string name="app_name">InventoryManagment</string>
    <string name="title_app_name">FerreOspina</string>
    <string name="subtitle_principal_menu">Menu Principal</string>
    <string name="menu_item_company_title">Información de la Empresa</string>
    <string name="menu_item_inventory_title">Gestionar Inventario</string>
    <string name="menu_item_commercial_invoice_title">Generar Factura</string>
    <string name="menu_item_home_title">Menu Principal</string>

    <string name="message_error_system">¡Lo sentimos! Se presentó un error en el Sistema</string>
    <string name="message_error_server">¡Lo sentimos! Se presentó un error en el Servidor</string>
    <string name="message_error_connection">¡Parece que no hay Internet!\nPor favor revisa tu conexión para seguir navegando</string>

    <string name="no_results_company_message">Por favor, registra la información de tu Empresa</string>

    <string name="text_ok_dialog">ACEPTAR</string>
    <string name="text_cancel_dialog">CANCELAR</string>

    <string name="text_error">ERROR</string>
    <string name="text_warning">ALERTA</string>
    <string name="text_check">EXITO</string>
    <string name="text_question">PREGUNTA</string>
    <string name="text_info">INFORMACIÓN</string>
    <string name="text_load">CARGANDO</string>
    <string name="text_hint_company_name">Empresa</string>
    <string name="text_hint_company_address">Dirección</string>
    <string name="text_hint_company_phone">Teléfono</string>
    <string name="text_hint_company_email">Correo Electrónico</string>
    <string name="text_hint_company_owner">Propietario</string>
    <string name="text_button_register_company">REGISTRAR</string>
    <string name="text_button_update_company">Actualizar</string>
    <string name="message_successful_transaction">¡Transacción Exitosa!</string>
    <string name="message_process_transaction">Procesando Transacción...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
