<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group >
        <item
            android:id="@+id/navHome"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_item_home_title" />
        <item
            android:id="@+id/navCompany"
            android:icon="@drawable/ic_company"
            android:title="@string/menu_item_company_title" />
        <item
            android:id="@+id/navInventory"
            android:icon="@drawable/ic_inventory"
            android:title="@string/menu_item_inventory_title" />
        <item
            android:id="@+id/navInvoice"
            android:icon="@drawable/ic_commercial_invoice"
            android:title="@string/menu_item_commercial_invoice_title" />
    </group>
</menu>