<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".entities.company.view.CompanyFormFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="24dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCompanyName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/Error"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/tilCompanyAddress"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCompanyName"
            style="@style/EditTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_accessible_company"
            android:drawableLeft="@drawable/ic_accessible_company"
            android:drawablePadding="4dp"
            android:hint="@string/text_hint_company_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCompanyAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/Error"
        app:hintAnimationEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/tilCompanyPhone"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/tilCompanyName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCompanyAddress"
            style="@style/EditTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_accessible_address"
            android:drawableLeft="@drawable/ic_accessible_address"
            android:drawablePadding="4dp"
            android:hint="@string/text_hint_company_address"
            android:inputType="textPostalAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCompanyPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/Error"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/tilCompanyEmail"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/tilCompanyAddress">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCompanyPhone"
            style="@style/EditTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_accessible_phone"
            android:drawableLeft="@drawable/ic_accessible_phone"
            android:drawablePadding="4dp"
            android:hint="@string/text_hint_company_phone"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCompanyEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/Error"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/tilCompanyOwner"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/tilCompanyPhone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCompanyEmail"
            style="@style/EditTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_accessible_email"
            android:drawableLeft="@drawable/ic_accessible_email"
            android:drawablePadding="4dp"
            android:hint="@string/text_hint_company_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCompanyOwner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/Error"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/btnAction"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/tilCompanyEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCompanyOwner"
            style="@style/EditTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_accessible_owner"
            android:drawableLeft="@drawable/ic_accessible_owner"
            android:drawablePadding="4dp"
            android:hint="@string/text_hint_company_owner"
            android:inputType="textAutoCorrect" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAction"
        style="@style/RaisedButtonDark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/helveticaneue_bold"
        android:text="@string/text_button_register_company"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>